--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -923,7 +923,7 @@
                         Button:
                             text: 'Update sketch'
                             pos_hint: {'top': 0.3}
-                            on_press: geometry_sketch.update_geometry(dict(), dict())
+                            on_press: geometry_sketch.update_geometry(root.results['geometry'])
 
 
 
