--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -872,6 +872,7 @@
                                         id: sample_shape
                                         text: 'circular'
                                         values: ['circular']
+                                        on_text: self.text = 'circular' if self.text not in self.values else self.text
                                     LabelHelp:
                                         id: sample_diameter_label
                                         text: 'Sample diameter [mm]'
@@ -915,7 +916,7 @@
                         GeometryGrid:
                             id: geometry_sketch
                             cols: 1
-                            pos: (80, 1024-line_height-self.height)
+                            pos: (0, 1024-line_height-self.height)
                             size_hint: (None, None)
                             height: 400
                             width: 800
