--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -2,13 +2,13 @@
 #:import np numpy
 #:import ntpath ntpath
 #:import parser_def simulation.parser_def
-#:import test kivy_test
 
 #:set parser_info parser_def.get_arguments_info(parser_def.input_parser())
 #:set num_input_size 0.3
 #:set default_font_size 18
 #:set line_height 35
 #:set menu_button_width 100
+#:set tab_height 1200
 #:set dark_grey np.divide([88, 88, 88, 50],[255., 255., 255., 100.])
 #:set dark_red_button np.divide([255, 50, 50, 100],[255., 255., 255., 100.])
 #:set dark_red_menu np.divide([154, 31, 31, 100],[255., 255., 255., 100.])
@@ -210,7 +210,7 @@
                         ScrollView:
                             FloatLayout:
                                 size_hint_y: None
-                                height: 1200  # 1024
+                                height: tab_height
 
 
                                 # General input
@@ -909,22 +909,61 @@
                 ScrollView:
                     FloatLayout:
                         size_hint_y: None
-                        height: 1024
+                        height: tab_height
                         NonFileBrowserLabel:
                             pos_hint: {'top': 1}
                             text: str(beam_geometry.text+' beam and '+gi_geometry.text+' geometry')
                         GeometryGrid:
                             id: geometry_sketch
                             cols: 1
-                            pos: (0, 1024-line_height-self.height)
+                            pos: (0, tab_height-line_height-self.height)
                             size_hint: (None, None)
                             height: 400
                             width: 800
+                        GridLayout:
+                            pos_hint: {'top': 0.6}
+                            cols: 2
+                            col_default_width: geometry_sketch.width/2.0 + 50
+                            col_force_default: True
+                            StackLayout:
+                                NonFileBrowserLabel:
+                                    text: 'Distances'
+                                    bold: True
+                                BoxLayout:
+                                    orientation: 'vertical'
+                                    size_hint_y: None
+                                    height: root.calc_boxlayout_height(line_height, self)
+                                    BoxLayout:
+                                        NonFileBrowserLabel:
+                                            text: 'Distance'
+                                        NonFileBrowserLabel:
+                                            text: '[mm]'
+                                BoxLayout:
+                                    id: distances_results
+                                    orientation: 'vertical'
+                                    size_hint_y: None
 
-                        Button:
-                            text: 'Update sketch'
-                            pos_hint: {'top': 0.3}
-                            on_press: geometry_sketch.update_geometry(root.results['geometry'])
+                            StackLayout:
+                                NonFileBrowserLabel:
+                                    text: 'Gratings'
+                                    bold: True
+                                BoxLayout:
+                                    orientation: 'vertical'
+                                    size_hint_y: None
+                                    height: root.calc_boxlayout_height(line_height, self)
+                                    BoxLayout:
+                                        NonFileBrowserLabel:
+                                            text: 'Grating'
+                                        NonFileBrowserLabel:
+                                            text: 'Pitch [um]'
+                                        NonFileBrowserLabel:
+                                            text: 'Duty Cycle'
+                                        NonFileBrowserLabel:
+                                            text: 'Radius [mm]'
+                                BoxLayout:
+                                    id: grating_results
+                                    orientation: 'vertical'
+                                    size_hint_y: None
 
 
 
