--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -169,6 +169,12 @@
             on_release: root.reset_input()
         Button:
             size_hint_x: None
+            width: 140
+            background_color: dark_red_button
+            text: 'Clear distances'
+            on_release: root.reset_distances()
+        Button:
+            size_hint_x: None
             width: 120
             background_color: dark_red_button
             text: 'Clear all'
