--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -120,12 +120,14 @@
                 Rectangle:
                     pos: self.pos
                     size: self.size
-        Button:
+        MenuSpinner:
             size_hint_x: None
-            width: 160
+            width: 100
             background_color: dark_red_button
-            text: 'Load input file...'
-            on_release: root.show_input_load()
+            id: load_spinner
+            text: 'Load...'
+            values: ['Input file...', 'Results...']
+            on_text: root.on_load_spinner(self)
         MenuSpinner:
             size_hint_x: None
             width: 100
