started show previous, not tested

--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -150,6 +150,7 @@
             CheckBox:
                 disabled: not root.previous_results
                 id: show_previous_results
+                #on_active: root.on_show_previous_results_active()
                 canvas:
                     Clear:
                     Color:
