--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -78,7 +78,7 @@
 <IntInput>:
     on_text: if self.text == '0': self.text = ''
 
-<MenuSpinnerButton>:
+<CustomSpinnerButton>:
     background_color: dark_red_button
     halign: 'left'
 
@@ -119,7 +119,7 @@
                 Rectangle:
                     pos: self.pos
                     size: self.size
-        MenuSpinner:
+        CustomSpinner:
             size_hint_x: None
             width: 100
             background_color: dark_red_button
@@ -127,7 +127,7 @@
             text: 'Load...'
             values: ['Input file...', 'Results...']
             on_text: root.on_load_spinner(self)
-        MenuSpinner:
+        CustomSpinner:
             size_hint_x: None
             width: 100
             background_color: dark_red_button
@@ -183,7 +183,7 @@
             on_release: root.reset_widgets()
 
         Widget:
-        MenuSpinner:
+        CustomSpinner:
             size_hint_x: None
             width: 150
             background_color: dark_red_button
@@ -902,11 +902,6 @@
 
                 Button:
                     size_hint_y: None
-                    # tempFix for issue #9 (start)
-                    height: line_height * 1.1
-                    size_hint_x: 1.01 *0.5
-                    pos_hint: {'right': 0.999}
-                    # tempFix for issue #9 (end)
                     text: 'Calculate geometry'
                     on_press: root.calculate_geometry()
 
