added fixed distance parameter

--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -902,6 +902,7 @@
                             Widget:
 
                 Button:
+                    disabled: show_previous_results.active
                     size_hint_y: None
                     text: 'Calculate geometry'
                     on_press: root.calculate_geometry()
