updated help messages

--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -326,7 +326,7 @@
                                                 LabelHelp:
                                                     size_hint_x: 0.4
                                                     text: 'Choose spectrum file'
-                                                    help_message: "Location of spectrum file (.csv).\nFile format:\nenergy,photons\ne1,p1\ne2,p2\n.,.\n.,.\n.,."
+                                                    help_message: "Location of spectrum file (.csv).\nFile format:\nenergy,photons\ne1,p1\ne2,p2\n.,.\n.,.\n.,.\n\nPhotons are in [1/pixel/sec]."
                                                 Button:
                                                     size_hint_x: 0.1
                                                     text: 'Load'
